# CalcGTest

./: CMakeLists.txt  Consts.h  ICalculator.h  InMemoryHistory.cpp  InMemoryHistory.h  README.md  SimpleCalculator.cpp  SimpleCalculator.h
tests/: SimpleCalculatorTest.cpp
